# Velvet

./: CMakeLists.txt  README.md
src/: DBCFile.cpp  DBCFile.h  Velvet.cpp  Velvet.h  preCompiled.h  tcharness.h
src/res/: Velvet.rc  resource.h
win/: Velvet.sln  Velvet.vcxproj  Velvet.vcxproj.filters
